test/valid/static.art
static mut x = 1;
static y = 0;
#[export]
fn test() {
    x += y
}
