test/invalid/return.art
fn test() {
    return(0)
}
